--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -2,8 +2,8 @@ body { /* color green */
   background-color: #23451e;
 }
 #p.cool { /* do class: p.cool later */
-  border: dashed;
-  background color: #FFFFFF;
+  border: solid;
+  background color: #FFFFFF; /* color white */
 }
 body { 
   margin: 15px;
@@ -11,11 +11,26 @@ body {
 img { 
   border: dashed;
 }
-#h1.cool { /* do class: p.cool later */
+#h1.cool { /* do class: h1.cool later */
   padding: 50px;
   border: solid;
 }
-a { /* color white */
+a:link { /* color white */
  color: #FFFFFF;
 }
-.button
+a:visited {
+  color
+  
+}
+.button {
+  background-color: #23451e; /* color green */
+  border: solid; 
+  color: #FFFFFF;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: context-menu;
+}
+  
