--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -22,7 +22,7 @@ a:visited { /* color lightgreen */
   color: #90EE90;
   
 }
-.button {
+#.button {
   background-color: #23451e; /* color green */
   border: solid; 
   color: #FFFFFF;
